# ea_benchmark

./: .gitignore  benchmark_functions.py  main.py  pyproject.toml
