[tool.poetry]
name = "ea-benchmark"
version = "0.1.0"
description = ""
authors = ["VladimirCech <vladda.cech@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
